update hlavicky a pridanie abstraktu

--- a/clanok.tex
+++ b/clanok.tex
@@ -15,15 +15,15 @@
 
 \pagestyle{headings}
 
-\title{Názov\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2015/16, vedenie: Meno Priezvisko}} % meno a priezvisko vyučujúceho na cvičeniach
+\title{Vplyv násilnych hier na správanie človeka\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2022/23, vedenie: Ing. Vladimír Mlynarovič, PhD.}} % meno a priezvisko vyučujúceho na cvičeniach
 
-\author{Meno Priezvisko\\[2pt]
+\author{Adam Kačmár\\[2pt]
 	{\small Slovenská technická univerzita v Bratislave}\\
 	{\small Fakulta informatiky a informačných technológií}\\
-	{\small \texttt{...@stuba.sk}}
+	{\small \texttt{xkacmara@stuba.sk}}
 	}
 
-\date{\small 30. september 2015} % upravte
+\date{\small 23. október 2022} % upravte
 
 
 
@@ -32,7 +32,7 @@
 \maketitle
 
 \begin{abstract}
-\ldots
+Článok sa zaoberá násilím vo videohrách a jeho vplyvom na hráčov počas hrania v online svete ako aj v reálnom živote. Bežný stereotyp rodičov detí v mladom veku, ktorý počul každý hráč pri hraní strieľačiek nám predostiera otázku či tomu tak naozaj je. Herný svet v dnešnej dobe ponúka množstvo variácií hier, ktoré nás dostávajú do pozícií vojakov, nájomných vrahov či obrancov vesmíru. Takéto široké spektrum nám ponúka aj možnosť herného zážitku pre viacerých hráčov a kompetitívny mód, pri ktorom sa dokáže hráč rozčúliť nad slabším výkonom spoluhráča či tímu a dá im to ľudovo „zožrať“. Pri veľkej dávke súťaživosti a vžitia sa do hry rastie rovnako aj agresia hráča. Otázkou tohto článku je či takáto agresia je vyvolaná práve typom hry, ktorá násilie podsúva. Výsledky nám dávajú štúdie, ktoré merali správanie účastníkov pri viacerých scenároch.
 \end{abstract}
 
 
