--- a/clanok.tex
+++ b/clanok.tex
@@ -48,7 +48,7 @@ Záverečné poznámky prináša časť~\ref{zaver}.
 
 
 
-\section{Nejaká časť} \label{nejaka}
+\section{Dôsledky} \label{dosledky}
 
 Z obr.~\ref{f:rozhod} je všetko jasné. 
 
@@ -62,14 +62,14 @@ Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný pláva
 
 
 
-\section{Iná časť} \label{ina}
+\section{Prejavy} \label{prejavy}
 
 Základným problémom je teda\ldots{} Najprv sa pozrieme na nejaké vysvetlenie (časť~\ref{ina:nejake}), a potom na ešte nejaké (časť~\ref{ina:nejake}).\footnote{Niekedy môžete potrebovať aj poznámku pod čiarou.}
 
 Môže sa zdať, že problém vlastne nejestvuje\cite{Coplien:MPD}, ale bolo dokázané, že to tak nie je~\cite{Czarnecki:Staged, Czarnecki:Progress}. Napriek tomu, aj dnes na webe narazíme na všelijaké pochybné názory\cite{PLP-Framework}. Dôležité veci možno \emph{zdôrazniť kurzívou}.
 
 
-\subsection{Nejaké vysvetlenie} \label{ina:nejake}
+\subsection{Prejavy voči spoluhráčom} \label{ina:spoluhraci}
 
 Niekedy treba uviesť zoznam:
 
@@ -94,19 +94,19 @@ Ten istý zoznam, len číslovaný:
 \end{enumerate}
 
 
-\subsection{Ešte nejaké vysvetlenie} \label{ina:este}
+\subsection{Prejavy voči okoliu} \label{ina:okolie}
 
 \paragraph{Veľmi dôležitá poznámka.}
 Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom.
 
 
 
-\section{Dôležitá časť} \label{dolezita}
+\section{Udalosti v minulost} \label{udalosti}
 
 
 
 
-\section{Ešte dôležitejšia časť} \label{dolezitejsia}
+\section{Výskum} \label{vyskum}
 
 
 
