update citacie a doplnene sekcie

--- a/clanok.tex
+++ b/clanok.tex
@@ -39,16 +39,20 @@
 
 \section{Úvod}
 
-Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
+V dnešnej dobe býva bežnou praxou, že sú videohry súčasťou voľného času mladých ľudí, pri ktorých sa odpútajú od reality počas hier s priateľmi. Počas dekád vývoja herného priemyslu sa vyvinuli žánre a herná realita do nepredstaviteľných rozmerov, u ktorých si ľudia v minulosti nedokázali predstaviť realizáciu. V posledných 15 rokoch takého technológie stúpli na nový výkonnostný level reality a s tým sa aj hry variabilných žánrov vykryštalizovali do absolútnej dokonalosti.
 
-Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
-Základný problém, ktorý bol naznačený v úvode, je podrobnejšie vysvetlený v časti~\ref{nejaka}.
-Dôležité súvislosti sú uvedené v častiach~\ref{dolezita} a~\ref{dolezitejsia}.
-Záverečné poznámky prináša časť~\ref{zaver}.
+Jednými zo žánrov sú aj akčné a first-person shooter hry, ktoré sú založené na najmä na násilí voči nepriateľom v rôznych formách. Priamoúmerne s vývojom a modernizáciou videohier sa vizuálne približujú aj „strieľačký“ bližšie k reálnemu svetu. Pri týchto hrách je bežná herná možnosť módu pre viacerých hráčov, resp. multiplayer, v ktorom sa súťaživá nenávisť voči protihráčom premieňa na nenávisť z frustrácie voči spoluhráčov, ktorých výkon nenapĺňa ideálne predstavy hráča. Podobným nenávistným a násilným prejavom dokáže čeliť aj rodina a okolie hráča, v zriedkavých prípadoch aj udalosti, ktoré pohnú spoločnosťou, štátom aj svetom.  V minulosti sa spoločnosť stretla práve s touto otázkou pri masových vraždách, streľbách alebo teroristických činoch, za ktorými stáli mladí ľudia, u ktorých sa domnievalo, že dôležitým faktorom boli aj násilné videohry, ktoré pridávali myšlienky konateľom smrteľných aktov ~\ref{minulost}. Práve tieto korelácie medzi násilnými hrami, ktoré sledujú výskumy v posledných rokoch dávajú lepší drobnohľad na túto problematiku(~\ref{vyskum}). Záverečne poznámky podávajú pohľad individuála a laika ako aj samostatný výsledok výskumu.
+
+%Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
+
+%Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
+%Základný problém, ktorý bol naznačený v úvode, je podrobnejšie vysvetlený v časti~\ref{nejaka}.
+%Dôležité súvislosti sú uvedené v častiach~\ref{dolezita} a~\ref{dolezitejsia}.
+%Záverečné poznámky prináša časť~\ref{zaver}.
 
 
+\section{Príčiny násilia a nenávisti} \label{priciny}
 
-\section{Dôsledky} \label{dosledky}
 
 Z obr.~\ref{f:rozhod} je všetko jasné. 
 
@@ -62,14 +66,17 @@ Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný pláva
 
 
 
-\section{Prejavy} \label{prejavy}
+\section{Prejavy násilia a nenávisti} \label{prejavy}
 
-Základným problémom je teda\ldots{} Najprv sa pozrieme na nejaké vysvetlenie (časť~\ref{ina:nejake}), a potom na ešte nejaké (časť~\ref{ina:nejake}).\footnote{Niekedy môžete potrebovať aj poznámku pod čiarou.}
+Prejavy násilia a nenávisti sú bežnou praxou počas hrania videohier. Takéto prejavy sa diferencujú aj podľa typu danej hry na offline hry a online hry. Každa subkategória má u svojich hier rôzne prejavy násilia a nenávisti, ktoré vznikajú frustráciou z priebehu hry, výkonov hráča alebo spoluhráčov alebo iných faktorov. Frustrácia pôsobí aj pri neschopnosti hráča ovládať hru správne alebo neschopnosti zlepšovať sa v nej\cite{UoR-Failure}, kde to bývajú prevažne offline hry. Pri online hrách sa pretláča aj nenávisť voči spoluhráčom, na ktorú poukazuje pasáž ~\ref{ina:spoluhraci}.
 
 Môže sa zdať, že problém vlastne nejestvuje\cite{Coplien:MPD}, ale bolo dokázané, že to tak nie je~\cite{Czarnecki:Staged, Czarnecki:Progress}. Napriek tomu, aj dnes na webe narazíme na všelijaké pochybné názory\cite{PLP-Framework}. Dôležité veci možno \emph{zdôrazniť kurzívou}.
 
 
 \subsection{Prejavy voči spoluhráčom} \label{ina:spoluhraci}
+Prejavy nenávisti pri móde pre viacerých hráčov sú bežnou praxou pri videohrách. Hráč počas hrania prichádza do mnohých situácií, kde je dôležitá kooperácia so spoluhráčmi, ktoré môžu výrazne ovplyvniť priebeh hry. V prípade neúspechu a zlyhania jednotlivca sa dostávajú hráči do vzájomných sporov o tom, kto chybu spôsobil. 
+
+\subsection{Prejavy voči okoliu} \label{ina:okolie}
 
 Niekedy treba uviesť zoznam:
 
@@ -93,21 +100,17 @@ Ten istý zoznam, len číslovaný:
 	\end{enumerate}
 \end{enumerate}
 
-
-\subsection{Prejavy voči okoliu} \label{ina:okolie}
-
 \paragraph{Veľmi dôležitá poznámka.}
 Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom.
 
+\section{Regulácia okolím} \label{regulacia}
 
 
-\section{Udalosti v minulost} \label{udalosti}
-
+\section{Udalosti v minulosti} \label{minulost}
 
 
 
 \section{Výskum} \label{vyskum}
-
 
 
 
