--- a/literatura.bib
+++ b/literatura.bib
@@ -41,8 +41,8 @@
 }
 
 % zdroj na webe
-@misc{PLP-Framework,
-	author = "Software Engineering Institute, Carnegie Mellon University",
-	title = "A Framework for Software Product Line Practice---Version 5.0",
-	howpublished = "\url{http://www.sei.cmu.edu/productlines/frame_report/}",
+@misc{UoR-Failure,
+	author = "University of Rochester",
+	title = "Rage-quitting: Feelings of failure, not violent content, foster aggression in video gamers.",
+	howpublished = "\url{www.sciencedaily.com/releases/2014/04/140407113113.htm/}",
 }
