--- a/literatura.bib
+++ b/literatura.bib
@@ -46,3 +46,12 @@
 	title = "Rage-quitting: Feelings of failure, not violent content, foster aggression in video gamers.",
 	howpublished = "\url{www.sciencedaily.com/releases/2014/04/140407113113.htm/}",
 }
+
+
+@misc{TopGames,
+	author = "ActivePlayer",
+	title = "Top 15 Most Popular PC Games of 2022",
+	howpublished = "\url{https://activeplayer.io/top-15-most-popular-pc-games-of-2022/}",
+}
+
+https://sportsbrowser.net/most-popular-online-games/
