priadny text do sekcie 4

--- a/clanok.tex
+++ b/clanok.tex
@@ -63,14 +63,15 @@ Prejavy nenávisti pri móde pre viacerých hráčov sú už štandardom. Hráč
 
 Pribudajú vulgarizmy rôznych variánt, ktoré sú neetické a vedeli by aj hraničiť so zákonom. Frustrovaný hráč vyjadruje svoje vulgarizmy vo forme nenávistných poznámok na blízku rodinu dotknutej osoby, rodičov, súrodencov či dokonca ešte nenarodené deti. Ďalšou formou sú národnnostné poznámky, pri ktorých sa vytiahnú tie najohranejšie naratívy a stereotypy pre daný národ. Do väčšieho a hraničného extrému zapadajú už len rasistické vulgarizmy, sexistické stereotypy alebo prebúdzanie myšlienok nelegálnych ideológií.
 
-S väčšou hráčskou základňou pribúda väčší počet konfliktov, ktoré vznikajú. K máju 2022 sa v rebríčku 15 najpopulárnejších hier(\cite{TopGames}) roku ocitlo až 12 hier s explicitným obsahom, ktoré sú zároveň aj multiplayerové. Pre herné spoločenstvo nie je žiadnym prekvapením, že sú medzi nimi hry ako Counter Strike: Global Offensive, League of Legends alebo Fortnite, ktoré sú verejné známe ako hry s vysokým podiel toxického správania a nenávisti v komunite.
+S väčšou hráčskou základňou pribúda väčší počet konfliktov, ktoré vznikajú. K máju 2022 sa v rebríčku 15 najpopulárnejších hier(\cite{TopGames}) roku ocitlo až 12 hier s explicitným obsahom, ktoré sú zároveň aj multiplayerové. Pre herné spoločenstvo nie je žiadnym prekvapením, že sú medzi nimi hry ako Counter Strike: Global Offensive, League of Legends alebo Fortnite, ktoré sú verejné známe ako hry s vysokým podielom toxického správania a nenávisti v komunite.
 
 \subsection{Prejavy voči okoliu} \label{ina:okolie}
 Rovnako ako sú bežné prejavy frustrácie na spoluhráčov vedia byť bežné aj prejavy frustrácie na svojom okolí. Slovné prejavy sú však miernejšie a nezachádzajú do extrémov. Rodičia, súrodenci či spolubývajúci dostanú neprijemnú odpoveď s agresivným a nahnevaným podtónom. 
 
 V prípade, že sa takáto agresia neprejaví voči človeku, vo väčšine prípadov si hráč vybije hnev na okolitých predmetoch. V dôsledku toho dostáva počítačové príslušenstvo, nábytok či stena do pozície svojho terču. V niektorých prípadoch hráči vybíjajú svoju zlosť aj sami na sebe: údermi do nôh, hrude alebo kopaním nôh do tvrdých predmetoch.
-\subsection{Udalosti v minulosti} \label{ina:minulost}
 
+\subsection{Udalosti v minulosti} \label{ina:minulost}
+Otázky ohľadom vplyvu násilných hier boli v minulost pokládané po tragických akciách
 
 \begin{itemize}
 \item jedna vec
@@ -101,8 +102,7 @@ Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom
 
 
 \section{General Aggression Model} \label{GAM}
-General Aggression Model (Všeobecný model agresie) je často používaným modelom, ktorý sa využíva ako ukazovateľ vzťahu medzi násilím vo videohrách a agresiou prejavovanou v reálnom svete.
-
+General Aggression Model (GAM) je často používaným modelom, ktorý sa využíva ako ukazovateľ vo vzťahu k agresivite, v tomto prípade aj spojenú s videohrami, prejavovanou v reálnom svete. Zaoberá sa úlohou sociálnych, kognitívnych, osobnostných, vývinových a biologických faktorov na agresivitu. Približné procesy GAM podrobne opisujú, ako faktory osoby a situácie ovplyvňujú kognície, pocity a vzrušenie, ktoré následne ovplyvňujú procesy hodnotenia a rozhodovania, ktoré následne ovplyvňujú agresívne alebo neagresívne výsledky správania. Každý cyklus približných procesov slúži ako skúška učenia, ktorá ovplyvňuje vývoj a dostupnosť agresívnych znalostných štruktúr\cite{GAM}. 
 
 
 \section{Záver} \label{zaver} % prípadne iný variant názvu
