--- a/literatura.bib
+++ b/literatura.bib
@@ -54,4 +54,14 @@
 	howpublished = "\url{https://activeplayer.io/top-15-most-popular-pc-games-of-2022/}",
 }
 
-https://sportsbrowser.net/most-popular-online-games/
+@article{GAM,
+author = "Allen, Johnie and Anderson, Craig and Bushman, Brad",
+year = "2017",
+month = "04",
+pages = "",
+title = "The General Aggression Model",
+volume = "19",
+journal = "Current Opinion in Psychology",
+doi = "10.1016/j.copsyc.2017.03.034"
+}
+
