pridane reakcie na prednasky a diagram

--- a/clanok.tex
+++ b/clanok.tex
@@ -23,7 +23,7 @@
 	{\small \texttt{xkacmara@stuba.sk}}
 	}
 
-\date{\small 24. október 2022} % upravte
+\date{\small 14. december 2022} % upravte
 
 
 
@@ -43,7 +43,7 @@ V dnešnej dobe býva bežnou praxou, že sú videohry súčasťou voľného ča
 
 Jednými zo žánrov sú aj akčné a first-person shooter hry, ktoré sú založené najmä na násilí voči nepriateľom v rôznych formách. Priamoúmerne s vývojom a modernizáciou videohier sa vizuálne približujú aj „strieľačký“ bližšie k reálnemu svetu. Pri týchto hrách je bežná herná možnosť módu pre viacerých hráčov, resp. multiplayer, v ktorom sa súťaživá nenávisť voči protihráčom premieňa na nenávisť z frustrácie voči spoluhráčov, ktorých výkon nenapĺňa ideálne predstavy hráča. Podobným nenávistným a násilným prejavom dokáže čeliť aj rodina a okolie hráča, v zriedkavých prípadoch aj udalosti, ktoré pohnú spoločnosťou, štátom aj svetom. 
 
-V minulosti sa spoločnosť stretla práve s touto otázkou pri masových vraždách, streľbách alebo teroristických činoch, za ktorými stáli mladí ľudia, u ktorých sa domnievalo, že dôležitým faktorom boli aj násilné videohry, ktoré pridávali myšlienky konateľom smrteľných aktov ~\ref{ina:minulost}. Práve tieto korelácie medzi násilnými hrami, ktoré sledujú výskumy v posledných rokoch dávajú lepší drobnohľad na túto problematiku(~\ref{GAM}). Záverečne poznámky podávajú pohľad individuála a laika ako aj samostatný výsledok výskumu.
+V minulosti sa spoločnosť stretla práve s touto otázkou pri masových vraždách, streľbách alebo teroristických činoch, za ktorými stáli mladí ľudia, u ktorých sa domnievalo, že dôležitým faktorom boli aj násilné videohry, ktoré pridávali myšlienky konateľom smrteľných aktov (~\ref{ina:minulost}). Práve tieto korelácie medzi násilnými hrami, ktoré sledujú výskumy v posledných rokoch dávajú lepší drobnohľad na túto problematiku(~\ref{GAM}).
 
 %Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
 
@@ -55,7 +55,7 @@ V minulosti sa spoločnosť stretla práve s touto otázkou pri masových vražd
 
 \section{Prejavy násilia a nenávisti} \label{prejavy}
 
-Prejavy násilia a nenávisti sú bežnou praxou počas hrania videohier. Takéto prejavy sa diferencujú aj podľa typu danej hry na offline hry a online hry. Každa subkategória má u svojich hier rôzne prejavy násilia a nenávisti, ktoré vznikajú frustráciou z priebehu hry, výkonov hráča alebo spoluhráčov alebo iných faktorov. Frustrácia pôsobí aj pri neschopnosti hráča ovládať hru správne alebo neschopnosti zlepšovať sa v nej\cite{UoR-Failure}, prevažne pri offline hrách. Pri online hrách sa pretláča aj nenávisť voči spoluhráčom, na ktorú poukazuje pasáž ~\ref{ina:spoluhraci}. 
+Prejavy násilia a nenávisti sa stali bežnými počas hrania videohier. Takéto prejavy sa diferencujú aj podľa typu danej hry na offline hry a online hry. Každa subkategória má u svojich hier rôzne prejavy násilia a nenávisti, ktoré vznikajú frustráciou z priebehu hry, výkonov hráča alebo spoluhráčov alebo iných faktorov. Frustrácia pôsobí aj pri neschopnosti hráča ovládať hru správne alebo neschopnosti zlepšovať sa v nej\cite{UoR-Failure}, prevažne pri offline hrách. Pri online hrách sa pretláča aj nenávisť voči spoluhráčom, na ktorú poukazuje pasáž ~\ref{ina:spoluhraci}. 
 
 
 \subsection{Prejavy voči spoluhráčom} \label{ina:spoluhraci}
@@ -103,6 +103,18 @@ Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom
 
 \section{General Aggression Model} \label{GAM}
 General Aggression Model (GAM) je často používaným modelom, ktorý sa využíva ako ukazovateľ vo vzťahu k agresivite, v tomto prípade aj spojenú s videohrami, prejavovanou v reálnom svete. Zaoberá sa úlohou sociálnych, kognitívnych, osobnostných, vývinových a biologických faktorov na agresivitu. Približné procesy GAM podrobne opisujú, ako faktory osoby a situácie ovplyvňujú kognície, pocity a vzrušenie, ktoré následne ovplyvňujú procesy hodnotenia a rozhodovania, ktoré následne ovplyvňujú agresívne alebo neagresívne výsledky správania. Každý cyklus približných procesov slúži ako skúška učenia, ktorá ovplyvňuje vývoj a dostupnosť agresívnych znalostných štruktúr\cite{GAM}. 
+
+\section{Reakcie na prednášky} \label{reakcie}
+
+\subsection{Plagiátorstvo} \label{ina:plagiatorstvo}
+Plagiátorstvo začalo byť v poslednej dobe veľmi otáľanou témou po prevalení prác vyšších ľudí v politike. Dlhodobo však školstvo podnecuje, aby sme si dávali pozor na to, čo je náš výtvor a čo nie je a ako správne priznať cudziu prácu alebo citáciu na našej práci. Je to veľmi podstatné z pohľadu autora, ako aj z pohľadu človeka, ktorý využíva cudzie zdroje. 
+Z pohľadu autora ide o čas a námahu, ktorú vykonal pri skúmaní, vytváraní a pestovaní svojej práce, pri ktorej sa usiloval o dosiahnutie istej kvality a posilnenie výpovednej hodnoty výtvoru. V druhom prípade však ide o trošku širšie ponímanie. Človek, ktorý cituje musí vzdať nejaký kredit autorovi, ale nemôže mať drvivú väčšinu svojej práce tvorenú z citácií, hoc sú správne uvedené. Tento „autor“ by namiesto toho prísť s niečím novým, nepoznaným, ukázať nové fakty, podávať nové otázky, na ktoré treba hľadať odpovede a dať danú tému, resp. prácu do nového šatu, v ktorom ho predtým ešte nikto to takej miery nepojal. 
+
+
+\subsection{Udržateľnosť} \label{ina:udrzatelnost}
+Udržateľnosť je dôležitým faktorom pri práci pomaly všade a v hlbšom ponímaní aj v živote samotnom. S udržateľnosťou by sa dalo spojiť aj slovo „konzistencia“, ktoré nám udáva akúsi stálosť, resp. práve udržateľnosť. Každý človek sa s ňou stretne v nejakom inom svetle, ako aj my v školskom prostredí, pri práci na predmetoch a zadaniach a vlastne štúdium samotnom. Do istej miery spadáme do úvah o tom, či sa nám na niečom chce aktívne pracovať, stavať a v budúcnosti z toho budeme zbierať „úrodu“. 
+Pokiaľ nám daný subjekt nepríde atraktívny na jeho rozoberania a hlbšie preskúmavanie, začína upadať do pozadia pred inými atraktívnejšími subjektmi v našom okolí. V tomto prípade sa hráme s našimi budúcimi nenadobudnutými vedomosťami, ktoré budú od nás eventuálne vyžadované. Ak sa odhodláme napriek našej nevôli tomu subjektu venovať svoj čas dávame mu vynútenú udržateľnosť, ktorá nás vie do istej miery aj deprimovať a znechutiť nám štúdium. 
+V lepšom prípade, ak narazíme pri štúdiu na subjekt, ktorý nás prirodzene obohacuje, túžime po jeho preskúmaní, máme tzv. „vyhrané“, pretože spájame príjemné s užitočným práve skrz prirodzenú udržateľnosť. Práve tá je ťažko ovplyvniteľná a závisí od každého jednotlivca na základe charakteristických predpokladov.
 
 
 \section{Záver} \label{zaver} % prípadne iný variant názvu
